--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,18 @@
 cmake_minimum_required(VERSION 2.6)
 project(kscope)
 
+find_package(LLVM)
+
+if( NOT LLVM_FOUND )
+  message(FATAL_ERROR "LLVM package can't be found. Set CMAKE_PREFIX_PATH variable to LLVM's installation prefix.")
+endif()
+
+include_directories( ${LLVM_INCLUDE_DIRS} )
+link_directories( ${LLVM_LIBRARY_DIRS} )
+
+llvm_map_components_to_libraries(REQ_LLVM_LIBRARIES jit native)
+
+
 add_definitions(${CMAKE_CXX_FLAGS} -D__STDC_CONSTANT_MACROS)
 add_definitions(${CMAKE_CXX_FLAGS} -D__STDC_FORMAT_MACROS)
 add_definitions(${CMAKE_CXX_FLAGS} -D__STDC_LIMIT_MACROS)
