--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,4 @@
-find_package(LLVM)
-
-if( NOT LLVM_FOUND )
-  message(FATAL_ERROR "LLVM package can't be found. Set CMAKE_PREFIX_PATH variable to LLVM's installation prefix.")
-endif()
-
 set(KSCOPE_SOURCES
-        ast.cpp
         lexer.cpp
         parser.cpp
         codegen.cpp
@@ -13,11 +6,9 @@ set(KSCOPE_SOURCES
         main.cpp
 )
 
-include_directories( ${LLVM_INCLUDE_DIRS} )
-link_directories( ${LLVM_LIBRARY_DIRS} )
+add_subdirectory(ast)
 
-llvm_map_components_to_libraries(REQ_LLVM_LIBRARIES jit native)
 
 add_executable(kscope ${KSCOPE_SOURCES})
 
-target_link_libraries(kscope ${REQ_LLVM_LIBRARIES})
+target_link_libraries(kscope ast ${REQ_LLVM_LIBRARIES})
