Build in debug mode so we get debugging symbols.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ endif()
 include_directories( ${LLVM_INCLUDE_DIRS} )
 link_directories( ${LLVM_LIBRARY_DIRS} )
 
+set(CMAKE_BUILD_TYPE Debug)
+
 llvm_map_components_to_libraries(REQ_LLVM_LIBRARIES jit native)
 
 
