Use the new Context class during codegen.
As opposed to having global variables all over willy-nilly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if( NOT LLVM_FOUND )
   message(FATAL_ERROR "LLVM package can't be found. Set CMAKE_PREFIX_PATH variable to LLVM's installation prefix.")
 endif()
 
-include_directories( ${LLVM_INCLUDE_DIRS} )
+include_directories( src ${LLVM_INCLUDE_DIRS} )
 link_directories( ${LLVM_LIBRARY_DIRS} )
 
 set(CMAKE_BUILD_TYPE Debug)
