Split up the codegen pieces into separate files.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 file(GLOB KSCOPE_SOURCES *.cpp)
 
 add_subdirectory(ast)
+add_subdirectory(codegen)
 
 add_executable(kscope ${KSCOPE_SOURCES})
 
-target_link_libraries(kscope ast ${REQ_LLVM_LIBRARIES})
+target_link_libraries(kscope ast codegen ${REQ_LLVM_LIBRARIES})
