--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,8 @@
 file(GLOB KSCOPE_SOURCES *.cc)
 
-add_subdirectory(ast)
-add_subdirectory(codegen)
 add_subdirectory(parsing)
+add_subdirectory(rendering)
 
 add_executable(kscope ${KSCOPE_SOURCES})
 
-target_link_libraries(kscope ast codegen parsing ${REQ_LLVM_LIBRARIES} -lc++)
+target_link_libraries(kscope parsing ir_rendering ${REQ_LLVM_LIBRARIES} -lc++)
