Checkpoint: runs w/ pipeline chosen in repl
segfaults when evaluating an expression though

--- a/src/rendering/IR/CMakeLists.txt
+++ b/src/rendering/IR/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB IR_RENDERING_SOURCES *.cc)
 
-add_subdirectory(ORCPipeline)
+add_subdirectory(Pipeline)
 
 add_library(ir_rendering ${IR_RENDERING_SOURCES})
