--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(Render)
 
 add_executable(kscope ${KSCOPE_SOURCES})
 
-target_link_libraries(kscope parsing ir_pipeline ir_rendering ${REQ_LLVM_LIBRARIES} -lc++)
+target_link_libraries(kscope parsing ir_pipeline ir_rendering ${REQ_LLVM_LIBRARIES} -lc++ -lm)
