Explicitly include flex's include dirs.
For some reason I ran into a problem where the FlexLexer.h file
couldn't be found, adding this include_directories directive seems to
have done the trick.

At the very least it doesn't hurt.

--- a/src/Parse/CMakeLists.txt
+++ b/src/Parse/CMakeLists.txt
@@ -13,6 +13,8 @@ ADD_FLEX_BISON_DEPENDENCY(lexer parser)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
+include_directories(${FLEX_INCLUDE_DIRS})
+
 set(PARSING_SOURCES
     ASTree.cc
     lexer.cc)
